2009-12-03  Dan Nicolaescu  <dann@ics.uci.edu>

	Add support for bzr shelve/unshelve.
	* vc-bzr.el (vc-bzr-shelve-map, vc-bzr-shelve-menu-map)
	(vc-bzr-extra-menu-map): New variables.
	(vc-bzr-extra-menu, vc-bzr-extra-status-menu, vc-bzr-shelve)
	(vc-bzr-shelve-apply, vc-bzr-shelve-list)
	(vc-bzr-shelve-get-at-point, vc-bzr-shelve-delete-at-point)
	(vc-bzr-shelve-apply-at-point, vc-bzr-shelve-menu): New functions.
	(vc-bzr-dir-extra-headers): Display shelves.

	* vc-bzr.el (vc-bzr-print-log): Deal with nil arguments better.

2009-12-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/bibtex.el (bibtex-complete-internal):
	Use completion-in-region.
	(bibtex-text-in-field-bounds): Remove unused var `opoint'.

2009-12-03  Dan Nicolaescu  <dann@ics.uci.edu>

	Support applying stashes.  Improve UI.
	* vc-git.el (vc-git-dir-extra-headers): Add tooltips.
	(vc-git-stash-apply, vc-git-stash-pop)
	(vc-git-stash-apply-at-point, vc-git-stash-pop-at-point)
	(vc-git-stash-menu): New functions.
	(vc-git-stash-menu-map): New variable.
	(vc-git-stash-map): Add bindings to popup a menu and to apply stashes.

2009-12-03  Glenn Morris  <rgm@gnu.org>

	* vc.el (log-view-vc-backend, log-view-vc-fileset): Declare.
	(vc-print-log-internal): Fix previous change.
	(vc-revert): Correct pluralization.

2009-12-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/make-mode.el (makefile-special-targets-list): No need for
	it to be an alist any more.
	(makefile-complete): Use completion-in-region.

	* progmodes/octave-mod.el (octave-complete-symbol):
	Use completion-in-region.

	Misc cleanup.
	* progmodes/idlwave.el (idlwave-comment-hook): Simplify with `or'.
	(idlwave-code-abbrev, idlwave-display-user-catalog-widget)
	(idlwave-complete-class): Don't quote lambda.
	(idlwave-find-symbol-syntax-table, idlwave-mode-syntax-table)
	(idlwave-mode-map): Move initialization into declaration.
	(idlwave-action-and-binding): Use backquotes.